--- a/style.css
+++ b/style.css
@@ -21,27 +21,27 @@ body {
 }
 
 /* REUSABLE */
-.container{
+.container {
   margin: 0 auto;
   padding: 0 3.2rem;
   max-width: 120rem;
 }
 
-.grid{
+.grid {
   display: grid;
   gap: 9.6rem;
   align-items: center;
 }
-.grid--2-cols{
-  grid-template-columns: repeat(2,1fr)
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
 }
-.grid--3-cols{
-  grid-template-columns: repeat(3,1fr);
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
 }
 
-/*  ////////////////// */   
+/*  ////////////////// */
 /* NAVBAR */
-.navbar-section{
+.navbar-section {
   position: fixed;
   width: 100%;
   z-index: 999;
@@ -52,14 +52,13 @@ body {
   padding: 0 4.8rem;
   background: #343a40;
 }
-.navbar-list{
+.navbar-list {
   list-style: none;
   display: flex;
   gap: 3.2rem;
 }
 
-
-.navbar-list a{
+.navbar-list a {
   text-decoration: none;
   color: #fff;
   font-weight: 700;
@@ -67,7 +66,7 @@ body {
 
 /* HAMBURGUER */
 
-.hamburguer-container{
+.hamburguer-container {
   justify-content: center;
   align-items: center;
   width: 5rem;
@@ -80,29 +79,30 @@ body {
   position: relative;
   display: none;
 }
-.hamburguer-line{
-   width: 4rem;
+.hamburguer-line {
+  width: 4rem;
   height: 0.5rem;
   background-color: #fff;
   border-radius: 5px;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
-.hamburguer-line::before,.hamburguer-line::after{
-   content: '';
+.hamburguer-line::before,
+.hamburguer-line::after {
+  content: '';
   position: absolute;
   height: 0.5rem;
   border-radius: 5px;
   width: 4rem;
   background-color: #fff;
-  transition: all .3s;
+  transition: all 0.3s;
 }
-.hamburguer-line::before{
-  transform: translateY(-1rem)
+.hamburguer-line::before {
+  transform: translateY(-1rem);
 }
 
-.hamburguer-line::after{
-  transform: translateY(1rem)
+.hamburguer-line::after {
+  transform: translateY(1rem);
 }
 
 .hamburguer-container.active .hamburguer-line {
@@ -110,107 +110,94 @@ body {
   background: transparent;
 }
 
-.hamburguer-container.active .hamburguer-line::before{
-  transform: rotate(45deg) translate(35px,-35px);
+.hamburguer-container.active .hamburguer-line::before {
+  transform: rotate(45deg) translate(35px, -35px);
 }
-.hamburguer-container.active .hamburguer-line::after{
+.hamburguer-container.active .hamburguer-line::after {
   transform: rotate(-45deg) translate(35px, 35px);
 }
 
-
 /* NAVLINK ANIM */
-.navbar-list.open{
-  transition: all .5s;
+.navbar-list.open {
+  transition: all 0.5s;
   left: 0;
 }
 
-
-
 /* HERO SECTION */
-.hero-section{
+.hero-section {
   padding: 12.8rem 0 9.6rem 0;
   position: relative;
   overflow: hidden;
 }
-.hero{
+.hero {
   max-width: 130rem;
   margin: 0 auto;
   padding: 0 2.4rem;
   display: grid;
   align-items: center;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.hero-description{
+.hero-description {
   font-size: 2rem;
   margin-bottom: 9.6rem;
   color: #333;
 }
-.hero-img img{
+.hero-img img {
   max-width: 60%;
 }
-.hero-img{
+.hero-img {
   display: flex;
   justify-content: flex-end;
 }
 
-
-
-
-
 /* DESCRIPTION-SECTION */
 
-.description-section{
+.description-section {
   padding: 2.4rem 0 2.4rem 0;
 }
-.description-1,.description-2,.description-3{
+.description-1,
+.description-2,
+.description-3 {
   text-align: center;
 }
-.description-center-border{
-
-  border-left: 1px solid #E7E7E7;
-  border-right: 1px solid #E7E7E7;
+.description-center-border {
+  border-left: 1px solid #e7e7e7;
+  border-right: 1px solid #e7e7e7;
 }
-
 
 /* ABOUT-US - SECTION */
 
-
-
-.about-section{
+.about-section {
   padding: 9.6rem 0 9.6rem 0;
-
 }
-.about-img{
+.about-img {
   width: 100%;
 }
 
 /* VIDEO SECTION */
-.video-section{
+.video-section {
   width: 100%;
   padding: 3.2rem 0 3.2rem 0;
 }
 
-
-.video{
+.video {
   display: flex;
   justify-content: center;
 }
 
-
-
 /* CATEGORY SECTION  */
-.category-section{
+.category-section {
   padding: 9.6rem 0 9.6rem 0;
 }
 
-.category-card a img{
+.category-card a img {
   width: 100%;
   max-width: 370px;
   height: 200px;
   object-fit: cover;
   border-radius: 5px;
-  transition: all .3s;
+  transition: all 0.3s;
   filter: opacity(70%);
 }
 .category-card {
@@ -218,117 +205,105 @@ body {
   position: relative;
 }
 
-.category-card a img:hover{
+.category-card a img:hover {
   transform: scale(1.1);
   filter: opacity(100%);
 }
-.category-card-subcontainer{
+.category-card-subcontainer {
   position: absolute;
   padding: 1.6rem;
-  background-color: rgba(255,255,255,.9);
+  background-color: rgba(255, 255, 255, 0.9);
   border-radius: 5px;
   width: calc(100% - 20px);
   bottom: 10%;
   left: 50%;
   transform: translateX(-50%);
-
 }
-.gap{
+.gap {
   display: grid;
   gap: 3.2rem;
 }
 
-
-
-
-
 /*  SERVICES SECTION */
-.services-section{
+.services-section {
   padding: 9.6rem 0 9.6rem 0;
   text-align: center;
 }
 
-.services-card{
+.services-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 6.4rem;
 }
-.card-title{
-margin-bottom: 3.2rem;
+.card-title {
+  margin-bottom: 3.2rem;
   color: #151515;
-  letter-spacing: .5rem;
-
-
+  letter-spacing: 0.5rem;
 }
-.card-price-center{
-  border-left: 1px solid #E7E7E7;
-  border-right: 1px solid #E7E7E7;
+.card-price-center {
+  border-left: 1px solid #e7e7e7;
+  border-right: 1px solid #e7e7e7;
 }
-.price-container{
+.price-container {
   display: flex;
   align-items: center;
   margin-bottom: 4.8rem;
 }
-.price-card{
-  color: #EB1C24;
+.price-card {
+  color: #eb1c24;
   font-size: 2rem;
 }
-.price-card-number{
-  color: #EB1C24;
+.price-card-number {
+  color: #eb1c24;
   font-size: 6.2rem;
   font-weight: 700;
 }
-.card-list{
+.card-list {
   list-style: none;
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
   color: rgba(21, 21, 21, 0.8);
-
 }
 
-
-.card-order-now{
-  text-decoration:none;
+.card-order-now {
+  text-decoration: none;
   margin-top: 6.4rem;
   padding: 1.6rem;
   background: red;
   color: white;
   border-radius: 5px;
-  transition: all .3s;
+  transition: all 0.3s;
   font-weight: 700;
 }
-.card-order-now:hover{
-
+.card-order-now:hover {
   background: #343a40;
 }
 
-
-.grid-services{
+.grid-services {
   display: grid;
   gap: 3.2rem;
 }
 
-
-.grid--3-services-section{
-grid-template-columns: repeat(3,1fr);
+.grid--3-services-section {
+  grid-template-columns: repeat(3, 1fr);
 }
 
 /* SUBSCRIBE SECTION */
-.subscribe-section{
+.subscribe-section {
   margin-top: 9.6rem;
   height: 50rem;
   width: 100%;
   position: relative;
 }
-.subscribe-section::before{
-
+.subscribe-section::before {
   content: '';
 
   height: 50rem;
   width: 100%;
-  background: fixed url('https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+  background: fixed
+    url('https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
   position: absolute;
   filter: brightness(40%);
 
@@ -336,14 +311,14 @@ grid-template-columns: repeat(3,1fr);
   background-repeat: no-repeat;
   background-size: cover;
 }
-.subscribe-container{
+.subscribe-container {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   text-align: center;
 }
-.subscribe-email{
+.subscribe-email {
   width: 80%;
   height: 50px;
   border-radius: 5px;
@@ -352,11 +327,12 @@ grid-template-columns: repeat(3,1fr);
   outline: none;
   font-family: inherit;
 }
-.subscribe-email:focus,.subscribe-email:hover{
-  border: 2px solid #ffe505
+.subscribe-email:focus,
+.subscribe-email:hover {
+  border: 2px solid #ffe505;
 }
 
-.btn-form{
+.btn-form {
   border: none;
   background-color: #ffe505;
   border-radius: 5px;
@@ -369,252 +345,237 @@ grid-template-columns: repeat(3,1fr);
   font-size: 1.6rem;
   text-transform: uppercase;
 }
-.btn-form:hover{
+.btn-form:hover {
   background-color: #e6ce05;
 }
-.subscribe-form{
+.subscribe-form {
   display: flex;
   align-items: center;
   gap: 1.6rem;
 }
 
 /* FOOTER SECTION */
-.footer-section{
+.footer-section {
   width: 100%;
   padding: 14rem 0 14rem 0;
 
   background-color: #343a40;
 }
-.footer-content{
+.footer-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 6.4rem;
   text-align: center;
 }
-.footer-nav ul li a{
+.footer-nav ul li a {
   text-transform: uppercase;
   text-decoration: none;
   color: #fff;
-  transition: all .3s;
+  transition: all 0.3s;
 }
-.footer-nav ul li a:hover{
+.footer-nav ul li a:hover {
   color: red;
 }
-.footer-nav ul{
+.footer-nav ul {
   display: flex;
   gap: 4.8rem;
-  list-style: none; 
+  list-style: none;
 }
-.footer-logo{
+.footer-logo {
   font-size: 2rem;
   text-decoration: none;
   font-weight: bold;
   color: white;
 }
-.bike-logo{
+.bike-logo {
   color: red;
 }
-.footer-icons{
+.footer-icons {
   display: flex;
   gap: 3.2rem;
-  
 }
-.footer-icons a{
+.footer-icons a {
   font-size: 2.4rem;
   text-decoration: none;
   cursor: pointer;
   color: #fff;
 }
-.footer-copy{
+.footer-copy {
   color: #fff;
   margin-top: 8rem;
 }
-.icon-circle{
+.icon-circle {
   border-radius: 50%;
   text-align: center;
   padding: 10px;
-  background: #6C757F;
+  background: #6c757f;
   width: 48px;
   height: 48px;
-  transition: all .3s;
+  transition: all 0.3s;
 }
-.icon-circle:hover{
+.icon-circle:hover {
   background: red;
 }
 
-
-
 /* HEADINGS */
-.heading-primary{
+.heading-primary {
   text-transform: uppercase;
   color: #333;
   font-size: 6.2rem;
   font-weight: 700;
   margin-bottom: 2.4rem;
   line-height: 1.08;
-  letter-spacing: -.3rem;
+  letter-spacing: -0.3rem;
 }
-.heading-secondary{
+.heading-secondary {
   font-size: 4.4rem;
   margin-bottom: 3.2rem;
   color: #333;
   text-transform: uppercase;
 }
-.white-color
-{
+.white-color {
   color: #fff;
 }
 
-
-.heading-tertiary{
+.heading-tertiary {
   font-size: 2rem;
   text-transform: uppercase;
   color: #555;
   font-weight: 500;
-  margin-bottom: .4rem;
-  
+  margin-bottom: 0.4rem;
 }
-.heading-quaternary{
+.heading-quaternary {
   font-size: 1.8rem;
-  margin-bottom: .8rem;
-
+  margin-bottom: 0.8rem;
 }
-.category-card-number{
+.category-card-number {
   font-size: 1.4rem;
 }
 
-.grid--description-container{
-  grid-template-columns: repeat(3 ,1fr);
+.grid--description-container {
+  grid-template-columns: repeat(3, 1fr);
 }
 
-
-
 /*  MEDIA */
-@media (max-width:1290px){
-  .hero
-  {
+@media (max-width: 1290px) {
+  .hero {
     max-width: 120rem;
   }
-  .heading-primary{
+  .heading-primary {
     font-size: 5.2rem;
   }
 
-  .hero-description{
+  .hero-description {
     font-size: 1.6rem;
   }
-  .card-order-now{
+  .card-order-now {
     font-size: 1.6rem;
   }
-
 }
-@media(max-width: 1211px){
-  .grid--3-cols{
-    grid-template-columns: repeat(2 ,1fr);
+@media (max-width: 1211px) {
+  .grid--3-cols {
+    grid-template-columns: repeat(2, 1fr);
   }
-  .category-card{
+  .category-card {
     justify-self: center;
     width: 100%;
     max-width: 370px;
-
   }
-  .grid--3-services-section{
-    grid-template: 'head head'
+  .grid--3-services-section {
+    grid-template:
+      'head head'
       'footer footer';
   }
-  .third-card{
+  .third-card {
     grid-area: footer;
   }
-  .heading-secondary{
+  .heading-secondary {
     font-size: 3.6rem;
   }
-  .heading-tertiary{
+  .heading-tertiary {
     font-size: 1.8rem;
   }
-  .description-center-border{
+  .description-center-border {
     border-right: none;
   }
-  .grid--description-container{
-    grid-template: 'head head'
+  .grid--description-container {
+    grid-template:
+      'head head'
       'footer footer';
   }
-  .description-2{
+  .description-2 {
     grid-area: footer;
   }
-  .card-price-center{
+  .card-price-center {
     border-right: none;
   }
 }
 
-
-@media (max-width: 1025px){
-
-  .hero-section{
+@media (max-width: 1025px) {
+  .hero-section {
     background: url('https://images.pexels.com/photos/93801/pexels-photo-93801.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
   }
-  .hero{
+  .hero {
     display: flex;
     justify-content: center;
     padding-bottom: 6.4rem;
   }
-  
-  .hero-img img{
+
+  .hero-img img {
     display: none;
   }
-  .heading-primary{
+  .heading-primary {
     color: #fff;
   }
-  .hero-description
-  {
+  .hero-description {
     color: #fff;
   }
 }
-@media(max-width: 850px){
-
-  .grid--description-container{
+@media (max-width: 850px) {
+  .grid--description-container {
     display: flex;
     flex-direction: column;
   }
-  .description-center-border{
+  .description-center-border {
     border: none;
   }
-  .grid--2-cols{
+  .grid--2-cols {
     display: flex;
     flex-direction: column;
   }
-  .grid--3-services-section{
+  .grid--3-services-section {
     display: flex;
     flex-direction: column;
   }
-  .card-price-center{
+  .card-price-center {
     border: none;
   }
-  .subscribe-form{
-display: flex;
+  .subscribe-form {
+    display: flex;
     flex-direction: column;
   }
 
-  .footer-nav ul{
+  .footer-nav ul {
     flex-direction: column;
   }
-  .footer-icons a{
+  .footer-icons a {
     font-size: 1.4rem;
   }
-  .icon-circle{
+  .icon-circle {
     width: 35px;
     height: 35px;
-
   }
-  .footer-copy{
+  .footer-copy {
     font-size: 1.4rem;
   }
-  .heading-quaternary{
+  .heading-quaternary {
     font-size: 1.4rem;
   }
-  .navbar-list{
+  .navbar-list {
     position: absolute;
     top: 6.4rem;
     display: flex;
@@ -622,11 +583,10 @@ display: flex;
     flex-direction: column;
     background-color: #343a40;
     width: 100%;
-    text-align: center; 
+    text-align: center;
     padding: 2.4rem 0 2.4rem 0;
   }
-  .hamburguer-container{
+  .hamburguer-container {
     display: flex;
   }
-
 }
